global strings, removed unnecessary bitcast in string literal

--- a/Doc/Doc.tex
+++ b/Doc/Doc.tex
@@ -474,7 +474,10 @@ fn main -> void
 						\drmrule{}{}{O}{\mc{*} :: \mc{(int,int)->int}}{TyBopMulInt},\ \ &
 						\drmrule{}{}{O}{\mc{*} :: \mc{(flt,flt)->flt}}{TyBopMulInt}\\
 						\drmrule{}{}{O}{\mc{*} :: \mc{(int,flt)->flt}}{TyBopMulIntFlt},\ \ &
-						\drmrule{}{}{O}{\mc{*} :: \mc{(flt,int)->flt}}{TybopMulFltInt}
+						\drmrule{}{}{O}{\mc{*} :: \mc{(flt,int)->flt}}{TyBopMulFltInt}
+					\end{align*}\begin{align*}
+						\drmrule{}{}{O}{\mc{*} :: \mc{(int,string)->string}}{TyBopMulIntStr},\ \ &
+						\drmrule{}{}{O}{\mc{*} :: \mc{(string,int)->string}}{TyBopMulStrInt}
 					\end{align*}
 					
 					\begin{align*}
